k8s/4um-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: forum-backend-service
  labels:
    app: forum
    tier: backend
spec:
  selector:
    app: forum
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: forum-be-port
  type: ClusterIP
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2 and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: forum-backend-deployment
  labels:
    app: forum
    tier: backend
spec:
  selector:
    matchLabels:
      app: forum
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: forum
        tier: backend
    spec:
      containers:
        - name: forum-backend
          image: 4umregistry.azurecr.io/4um/4um-backend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m # in millicores; 100m = 100 millicpu = 0.1 of total CPU core
              memory: 2560m
          ports:
            - name: forum-be-port
              containerPort: 8080
      imagePullSecrets:
        - name: regcred
