k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: forum-postgres-service
spec:
  selector:
    app: forum-postgres-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: forum-pg-port
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-postgres-db
spec:
  replicas: 1
  strategy:
    type: Recreate # shuts down old pod before creating new one
  selector:
    matchLabels:
      app: forum-postgres-container
  template:
    metadata:
      labels:
        app: forum-postgres-container
        tier: backend
    spec:
      containers:
        - name: forum-postgres-container
          image: postgres:11
          ports:
            - name: forum-pg-port
              containerPort: 5432
          volumeMounts:
            - name: forum-postgres-volume-mount
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: forum-postgres-volume-mount
          persistentVolumeClaim:
            claimName: forum-postgres-pvc
