k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forum-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: 4um.online
      http:
        paths:
          - path: /(api)/(.*)
            pathType: Prefix
            backend:
              service:
                name: forum-backend-service
                port:
                  number: 80
