k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forum-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: 4um.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forum-frontend-service
                port:
                  number: 80
